[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/time-trial/time-trial.gd" type="Script" id=1]
[ext_resource path="res://assets/HorizontalBar.png" type="Texture" id=2]
[ext_resource path="res://assets/VerticalBar.png" type="Texture" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 8, 8, 0, 0, 0, 0, 8, 1272, 0, 0, 0, 0, 712, 1272, 0, 0, 0, 0, 712, 8, 0, 0, 0, 0, 8, 8 )
}

[sub_resource type="Gradient" id=2]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.0284091, 0.918513 ), 0.0, 0.0, 0, 0, Vector2( 0.920455, 0.0851798 ), 0.0, 0.0, 0, 0 ]

[node name="TimeTrial" type="Node"]
script = ExtResource( 1 )

[node name="UpdateUI" type="Timer" parent="."]
wait_time = 0.1

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureProgressLeft" type="TextureProgress" parent="Control"]
anchor_bottom = 1.0
margin_right = 16.0
min_value = 272.0
max_value = 400.0
value = 400.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
fill_mode = 3
tint_under = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgressDown" type="TextureProgress" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -16.0
min_value = 200.0
max_value = 272.0
step = 0.0
value = 272.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
fill_mode = 1
tint_under = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgressRight" type="TextureProgress" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
min_value = 72.0
max_value = 200.0
value = 200.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
fill_mode = 2
tint_under = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgressUp" type="TextureProgress" parent="Control"]
anchor_right = 1.0
margin_bottom = 16.0
max_value = 72.0
step = 0.0
value = 72.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
tint_under = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
pause_mode = 2
position = Vector2( 8, 8 )
rotation = 1.5708

[node name="SecondLayer" type="CPUParticles2D" parent="Path2D/PathFollow2D"]
pause_mode = 2
position = Vector2( 0, 9.53674e-07 )
amount = 32
preprocess = 1.0
local_coords = false
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 40.0
scale_amount = 5.0
color_ramp = SubResource( 2 )

[node name="FirstLayer" type="CPUParticles2D" parent="Path2D/PathFollow2D"]
pause_mode = 2
amount = 32
preprocess = 1.0
local_coords = false
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 20.0
scale_amount = 10.0
scale_amount_curve = SubResource( 3 )

[connection signal="timeout" from="UpdateUI" to="." method="_on_UpdateUI_timeout"]
